force-app/main/default/objects/Community_Resource__c/Community_Resource__c.object-meta.xml
<CustomObject>
    <description>This object is used to store links to external systems and resource documents.  Resources will be organized by Themes and Tags where Theme.Type = Resource</description>
    <label>Community Resource</label>
    <nameField>
        <label>Resource Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>