force-app/main/default/objects/Community_Resource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Represents a description of the Resource that is presented in the Community.</description>
    <inlineHelpText>Represents a description of the Resource that is presented in the Community.</inlineHelpText>
    <label>Description</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>