force-app/main/default/objects/Community_Resource__c/fields/Help_Link__c.field-meta.xml
<CustomField>
    <fullName>Help_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, link will be the Help link</description>
    <label>Help Link</label>
    <type>Checkbox</type>
</CustomField>