force-app/main/default/objects/Community_Resource__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Used to store a hyperlink for a resource that is either a website or a file hosted elsewhere that can be accessed with a direct link.</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>