force-app/main/default/objects/Community_Resource__c/fields/Primary_Tag__c.field-meta.xml
<CustomField>
    <fullName>Primary_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define the primary tag used to categorize and organize this resource in the Resource Library list view.  Additional tags may also be associated separately.</description>
    <label>Primary Tag</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select a Resource Tag as the primary tag for this resource.</errorMessage>
        <filterItems>
            <field>Community_Tag__c.Community_Theme__r.Theme_Type__c</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filterItems>
        <infoMessage>You can only select Tags where the Theme Type = Resource.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Community_Tag__c</referenceTo>
    <relationshipLabel>Resources Tagged w Primary</relationshipLabel>
    <relationshipName>Resource_Tagged_w_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>