force-app/main/default/objects/Community_Resource__c/fields/Quick_Link__c.field-meta.xml
<CustomField>
    <fullName>Quick_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, link will be displayed in the &quot;Links&quot; menu</description>
    <inlineHelpText>f checked, link will be displayed in the &quot;Links&quot; menu</inlineHelpText>
    <label>Quick Link</label>
    <type>Checkbox</type>
</CustomField>