force-app/main/default/objects/Community_Resource__c/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>Identifies the name of the Resource that will be displayed in the Community.</description>
    <inlineHelpText>Identifies the name of the Resource that will be displayed in the Community.</inlineHelpText>
    <label>Resource Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>