force-app/main/default/objects/Community_Resource__c/fields/Resource_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_SF_ID__c</fullName>
    <description>Represents the 18 digit Salesforce Unique ID of the Resource record.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the Resource record.</inlineHelpText>
    <label>Resource SF ID</label>
    <type>Text</type>
</CustomField>