force-app/main/default/objects/Community_Resource__c/fields/Sort__c.field-meta.xml
<CustomField>
    <fullName>Sort__c</fullName>
    <description>To use to define sort order of Resources when viewing records on the CommunityResourceList page</description>
    <label>Sort</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>