force-app/main/default/objects/Community_Resource__c/listViews/Active_Resources.listView-meta.xml
<ListView>
    <fullName>Active_Resources</fullName>
    <columns>NAME</columns>
    <columns>Resource_Name__c</columns>
    <columns>Primary_Tag__c</columns>
    <columns>Sort__c</columns>
    <columns>Quick_Link__c</columns>
    <columns>Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Resources</label>
    <language>en_US</language>
</ListView>