force-app/main/default/objects/Community_Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Primary_Tag__c</columns>
    <columns>Quick_Link__c</columns>
    <columns>Sort__c</columns>
    <columns>Link__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>