force-app/main/default/objects/Community_Resource__c/listViews/All_Resources.listView-meta.xml
<ListView>
    <fullName>All_Resources</fullName>
    <columns>NAME</columns>
    <columns>Resource_Name__c</columns>
    <columns>Primary_Tag__c</columns>
    <columns>Sort__c</columns>
    <columns>Quick_Link__c</columns>
    <columns>Help_Link__c</columns>
    <columns>Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Resources</label>
    <language>en_US</language>
</ListView>